# goes-virtualizarr

./: .gitignore  README.md  create-s3-old.py  create-s3.py  create.py  debug.py  download.sh  files.txt  montly_mean.py  pyproject.toml  read.py  ruff.toml  scratch.py  single-kerchunk.py  srun-interactive.sh  utils.py
.ipynb_checkpoints/: slurm-checkpoint.sh
