[project]
name = "goes-virtualizarr"
requires-python = ">3.10"

dependencies = [
  "virtualizarr@git+https://github.com/zarr-developers/VirtualiZarr",
  "kerchunk@git+https://github.com/fsspec/kerchunk",
  "fsspec@git+https://github.com/fsspec/filesystem_spec@refs/pull/1663/head",
  "xarray",
  "ipython",
  "fastparquet"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
h5py = "*"
cftime = ">=1.6.4,<1.7"
