[project]
name = "goes-virtualizarr"
requires-python = ">3.10"

dependencies = [
  "virtualizarr@git+https://github.com/zarr-developers/VirtualiZarr",
  "kerchunk@git+https://github.com/fsspec/kerchunk",
  "fsspec@git+https://github.com/fsspec/filesystem_spec",
  "s3fs@git+https://github.com/fsspec/s3fs",
  "python-dateutil",
  "xarray",
  "ipython",
  "fastparquet"
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
h5py = "*"
cftime = ">=1.6.4,<1.7"
h5netcdf = ">=1.4.0,<2"
